<resources>
    <string name="app_name">Food Fantasy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_baker">home_baker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_my_dishes">My Dishes</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_log_out">Logout</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">My Dishes</string>
    <string name="menu_slideshow">My Orders</string>
    <string name="menu_tools">My Profile</string>
    <string name="menu_share">Sha</string>
    <string name="menu_send">Sen</string>

    <string name="edit_dish_baker_title">Edit Dish</string>
    <string name="create_new_account">Create New Account</string>
    <string name="verification">Enter Verification Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
